err/bibos-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/bibos_client'...
Compiling './lib/python3.5/site-packages/bibos_client/admin_client.py'...
***   File "./lib/python3.5/site-packages/bibos_client/admin_client.py", line 115
    print admin.register_new_computer('pip', uid, 'BIBOS', 'AAKB',
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bibos_client/gateway.py'...
***   File "./lib/python3.5/site-packages/bibos_client/gateway.py", line 53
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bibos_client/jobmanager.py'...
***   File "./lib/python3.5/site-packages/bibos_client/jobmanager.py", line 561
    except IOError, socket.error:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bibos_client-0.0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/bibos_utils'...
Compiling './lib/python3.5/site-packages/bibos_utils/bibos_config.py'...
***   File "./lib/python3.5/site-packages/bibos_utils/bibos_config.py", line 72
    print "Error opening BibOSConfig file for writing: ", str(e)
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bibos_utils-0.0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/netifaces-0.10.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
